name:                promote-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nlv/promote-api#readme
license:             BSD3
license-file:        LICENSE
author:              Leon Nikitin
maintainer:          nlvomsk@gmail.com
copyright:           Leon Nikitin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , text
  default-language:    Haskell2010

executable promote-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , promote-api
                     , text
  default-language:    Haskell2010

test-suite promote-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , promote-api
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nlv/promote-api
